--- a/lottery/result.html
+++ b/lottery/result.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 <div id="main" class="wall">
-    <div class="result-title">获奖名单</div>
+    <div class="result-title">名单</div>
     <div class="result-list" v-for="result in results">
         <div v-for="item in result">
             {{item}}
