--- a/lottery/index.html
+++ b/lottery/index.html
@@ -4,7 +4,7 @@
     <meta name="screen-orientation" content="portrait">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0"/>
-    <title>年会抽奖小程序</title>
+    <title>年会游戏小程序</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/wall.css">
     <style type="text/css">
@@ -141,7 +141,8 @@
 <body>
 <div id="main" class="wall">
     <div class="result-btn">
-       <a href="./result.html" target="_blank">获奖名单</a>
+        <p>随机到的人玩游戏</p>
+<!--       <a href="./result.html" target="_blank">名单</a>-->
     </div>
 </div>
 <div id="result" class="result">
@@ -160,6 +161,7 @@
                'button-success': running}">{{running?'停!':'开始'}}</button>
     <button class="pure-button button-warning" @click="reset">重置</button>
 </div>
+
 <script type="text/javascript" src="js/zepto.js"></script>
 <script type="text/javascript" src="js/vue.js"></script>
 <script type="text/javascript" src="js/tagcanvas.js"></script>
@@ -221,7 +223,7 @@
                 selected: 30,
                 running: false,
                 btns: [
-                    30, 10, 5, 2, 1
+                     5, 2, 1
                 ]
             },
             mounted () {
