--- a/lottery/index.html
+++ b/lottery/index.html
@@ -237,7 +237,7 @@
             },
             methods: {
                 reset: function(){
-                    if(confirm('确定要重置么？所有之前的抽奖历史将被清除！')){
+                    if(confirm('确定要重置么？之前的历史将被清除！')){
                         localStorage.clear();
                         location.reload(true);
                     }
